# algorithm_dumpster

./: .clang-format  CMakeLists.txt  README.md  benchmarks.html  index.html  results_from_mac_air_2017.html
data/apply_rearrangment_counting_1000/: data.json  description.json
data/apply_rearrangment_double_1000/: algo_apply_rearrangment.json  algo_apply_rearrangment_move.json  algo_apply_rearrangment_move_and_back.json  algo_apply_rearrangment_no_marker.json  apply_rearrangment.json  apply_rearrangment_move_and_back.json  apply_rearrangment_no_marker.json  description.json
data/apply_rearrangment_fake_url_1000/: algo_apply_rearrangment.json  algo_apply_rearrangment_move.json  algo_apply_rearrangment_move_and_back.json  algo_apply_rearrangment_no_marker.json  description.json
data/apply_rearrangment_fake_url_pair_1000/: algo_apply_rearrangment.json  algo_apply_rearrangment_move.json  algo_apply_rearrangment_move_and_back.json  algo_apply_rearrangment_no_marker.json  description.json
data/apply_rearrangment_int_1000/: algo_apply_rearrangment.json  algo_apply_rearrangment_move.json  algo_apply_rearrangment_move_and_back.json  algo_apply_rearrangment_no_marker.json  apply_rearrangment.json  apply_rearrangment_move_and_back.json  apply_rearrangment_no_marker.json  description.json
data/apply_rearrangment_std_int64_t_1000/: algo_apply_rearrangment.json  algo_apply_rearrangment_move.json  algo_apply_rearrangment_move_and_back.json  algo_apply_rearrangment_no_marker.json  apply_rearrangment.json  apply_rearrangment_move_and_back.json  apply_rearrangment_no_marker.json  description.json
data/bench/: all.json  lower_bound.json  min.json  remove.json
data/google_benchmark_461/: asm_diff.diff  fast.s  fast_clean_objdump.txt  objdump_clean_diff.diff  slow.s  slow_clean_objdump.txt
data/lower_bound_double_1000/: algo_lower_bound.json  algo_lower_bound_biased.json  (+6 more)
scripts/: all_apply_rearrangment_benchmarks.sh  all_lower_bound_benchmarks.sh  all_merge_benchmarks.sh  all_remove_benchmarks.sh  all_sort_benchmarks.sh  all_uint_tuple_benchmarks.sh  bench.js  benchmark_visualization.js  code_alignment_experiment.sh  code_alignment_experiment2.sh  generate_google_benchmark_data.sh  legacy_visualization_helpers.js  one_header.py  post_process_bench2_measurements.py  run_bench2.py  run_benchmark_folder.py
single_headers/: pack_single_header.h
src/: CMakeLists.txt  code_alignment.cc  code_alignment_almost.cc
src/algo/: advance_up_to.h  apply_rearrangment.h  binary_counter.h  binary_search.h  binary_search_biased.h  comparisons.h  container_cast.h  copy.h  factoriadic_representation.h  factorial.h  find_nth.h  half_nonnegative.h  half_positive.h  lift_iterators.h  make_vector_of_iterators.h  memoized_function.h  merge.h  merge_biased.h  mersenne_primes.h  move.h  nth_permutation.h  positions.h  quadratic_sort.h  shuffle_biased.h  simd.h  stable_sort.h  strcmp.h  strlen.h  type_functions.h  uint_tuple.h  unroll.h
src/algorithm/: factoriadic_representation.h  factorial.h  find_nth.h  make_vector_of_iterators.h  memoized_function.h  nth_permutation.h  to_factoriadic_representation.h  type_functions.h  unroll.h
src/bench/: bench.h
src/bench/algorithm_benchmarks/: min_bench.h  remove_zeroes.h
src/bench_generic/: apply_rearrangment.h  apply_rearrangment_function_objects.h  copy.h  counting_benchmark.h  counting_wrapper.h  declaration.h  fake_url.h  function_objects.h  input_generators.h  lower_bound.h  merge.h  noinline_int.h  remove.h  set_counting_parameters.h  set_parameters.h  sort.h  sort_function_objects.h  zip_to_pair.h
src/bench_runnable/: CMakeLists.txt  apply_rearrangment.cc  apply_rearrangment_1000_counting.cc  code_alignment.cc  code_alignment_almost.cc  code_alignment_experiment2.cc  copy_reverse_iterators.cc  google_benchmark_main.cc  lower_bound.cc  lower_bound_first_5_percent.cc  merge.cc  merge_with_small.cc  remove_0.cc  sort.cc  sort_1000_counting.cc  sort_size.cc  sort_type.cc  zip_to_pair_bit_size.cc
src/bench_runnable2/: CMakeLists.txt  lower_bound.cc  min.cc  remove.cc  std_min_element.cc  std_reduce.cc  std_remove.cc  unsq_reduce_v1.cc  unsq_remove.cc
src/compiler/: compiler_directives.h  introspection.h
src/simd/: bits.h  mm.h  mm_operations_generator.py  pack.h  register.h
src/simd/pack_detail/: address_manipulation.h  arithmetic_pairwise.h  bit_operations.h  blend.h  comparisons.h  comparisons_pairwise.h  compress.h  compress_mask.h  equal_full.h  equal_pairwise.h  load.h  masks.h  minmax_pairwise.h  operators.h  pack_cast.h  pack_declaration.h  pack_operators.h  reduce.h  replace_ignored.h  set.h  shuffle.h  spread_top_bits.h  store.h  to_array.h  top_bits.h  vbool_tests.h
src/test/: CMakeLists.txt  catch_main.cc
src/test/algo/: advance_up_to.t.cc  apply_rearrangment.t.cc  binary_counter.t.cc  binary_search.t.cc  binary_search_biased.t.cc  binary_search_generic_test.h  comparisons.t.cc  container_cast.t.cc  copy.t.cc  factoriadic_representation.t.cc  factorial.t.cc  find_nth.t.cc  half_nonnegative.t.cc  half_positive.t.cc  lift_iterators.t.cc  make_vector_of_iterators.t.cc  memoized_function.t.cc  merge.t.cc  merge_biased.t.cc  merge_generic_test.h  mersenne_primes.t.cc  move.t.cc  nth_permutation.t.cc  positions.t.cc  quadratic_sort.t.cc  shuffle_biased.t.cc  simd.t.cc  stability_test_util.h  stable_sort.t.cc  stable_sort_generic_test.h  strcmp.t.cc  strlen.t.cc  type_functions.t.cc  uint_tuple.t.cc  unroll.t.cc  zeroed_int.h
src/test/algorithm/: factoriadic_representation.t.cc  factorial.t.cc  find_nth.t.cc  make_vector_of_iterators.t.cc  memoized_function.t.cc  nth_permutation.t.cc  to_factoriadic_representation.t.cc  type_functions.t.cc  unroll.t.cc
src/test/bench_generic/: counting_benchmark.t.cc  counting_wrapper.t.cc  input_generators.t.cc  input_generators.t.cpp
src/test/simd/: bits.t.cc  mm.t.cc  pack.t.cc  register.t.cc
src/test/unsq/: common.h  drill_down.t.cc  find.t.cc  iteration.t.cc  reduce.t.cc  remove.t.cc  test_input.h  unsq.t.cc
src/unsq/: drill_down.h  find.h  iteration.h  reduce.h  remove.h  unsq.h
(+240 files in other folders)
